[tool.poetry]
name = "nas"
version = "0.1.0"
description = "awscli-similar to ny NAS at home"
authors = ["Erik Lilja <erikvlilja@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
paramiko = "^2.7.1"
sshtunnel = "^0.1.5"
tabulate = "^0.8.6"
pyyaml = "^5.4"
yaspin = "^0.16.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"
macholib = "^1.14"
nuitka = "^0.6.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
